--- a/index.html
+++ b/index.html
@@ -226,13 +226,10 @@
 									<p class="footer-title">Contact</p>
 									<ul>
 										<li>
-											<a>burhankcd@gmail.com</a>
+											<a>support@quickdropping.com</a>
 										</li>
 										<li>
-											<a> Burhan #3265</a>
-										</li>
-										<li>
-											<a>0212 444 44 44</a>
+											<a>+86 17357125067</a>
 										</li>
 									</ul>
 								</div>
